2002-12-27  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/conffile.c: New taperalgo configuration keyword.
	* server-src/conffile.h: Ditto.
	* man/amanda.8.in: Document it.
	* server-src/driver.c (startaflush): New function to start a flush to
	  tape.

2002-12-27  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/diskfile.c (parse_diskline): Allow skip in dumptype.

2002-12-23  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amstatus.pl.in: Parse features from PORT-WRITE line.

2002-12-19  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	Don't use the G flag for samba backup restore by tar.
	* recover-src/extract_list.c (enum dumptypes): Add IS_SAMBA_TAR.
	* recover-src/extract_list.c (extract_files_child): Set dumptype to
	  IS_SAMBA_TAR if it's a SAMBA backup. Don't pass the G flag to tar
	  if it's IS_SAMBA_TAR.

2002-12-18  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* amplot/amplot.awk: Parse line with features, parse ENDFLUSH line.

2002-12-17  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/planner.c (promote_highest_priority_incremental): Newer
	  algorithm that reduce the number of level 0 by hosts on a single day.

2002-12-17  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* amplot/amplot.awk: Parse newer log lines.

2002-12-11  Jean-Louis Martineau <martineau@iro.umontreal.ca> 
	* server-src/reporter.c (output_stats): Typo.

2002-12-09  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/reporter.c: Print an usage by tape.

2002-12-05  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* tape-src/tapeio.c (do_read): Init count to 0.

2002-12-05  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* tape-src/Makefile.am: Install tapetype program as amtapetype.
	* docs/TAPETYPES: Change for amtapetype.
	* man/amtapetype.8.in: New man page
	* man/Makefile.am: Install it.
	* configure.in (AC_CONFIG_FILES): Add man/amtapetype.8.
